php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #34478 Incorrect parsing of # character in location option
Submitted: 2005-09-12 11:13 UTC Modified: 2005-09-16 17:53 UTC
From: eric dot bourlon at gmail dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2005-09-12 (snap) OS: Win XP
Private report: No CVE-ID: None
 [2005-09-12 11:13 UTC] eric dot bourlon at gmail dot com
Description:
------------
I'm using SOAP in non WSDL mode. The location URL of my SOAP server contains a # character. When calling a function on this server the posted URL is truncated at the position of the # character.
This may be a supplementary case of the already reported bug 28702 but not solved in last CVS.

Reproduce code:
---------------
$accountCode="1234";
$saidsoap=new SoapClient();
$SoapClient_options=array('location'        => "http://my.server.be/cgi-bin/ws_account.cgi#ws_account",
                           'uri'            => "http://my.server.be/cgi-bin/ws_account_view",
                           'proxy_host'     => "192.168.157.111",
                           'proxy_port'     => 8080,
                           'proxy_login'    => "toto",
                           'proxy_password' => "tata",
                           'trace'          => 1);

$saidsoap->__construct(NULL,SoapClient_options);                           

$input_param[]=new SoapParam($accountCode, "account_oidval");
$output_param=$saidsoap->__soapCall("wsACCOUNTVIEWIn",$input_param,$SoapClient_options);

Expected result:
----------------
POST http://my.server.be/cgi-bin/ws_account.cgi#ws_account HTTP/1.1
Host: my.server.be
Connection: Keep-Alive
User-Agent: PHP SOAP 0.1
Content-Type: text/xml; charset=utf-8
SOAPAction: "http://my.server.be/cgi-bin/ws_account"
Content-Length: 568
Proxy-Authorization: Basic ZWJvdXJsb246cHllMDIw


Actual result:
--------------
POST http://my.server.be/cgi-bin/ws_account.cgi HTTP/1.1
Host: my.server.be
Connection: Keep-Alive
User-Agent: PHP SOAP 0.1
Content-Type: text/xml; charset=utf-8
SOAPAction: "http://my.server.be/cgi-bin/ws_account"
Content-Length: 568
Proxy-Authorization: Basic ZWJvdXJsb246cHllMDIw


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-09-13 10:39 UTC] eric dot bourlon at gmail dot com
I downloaded the last version but unfortunately observe the same phenomenon.
 [2005-09-13 10:55 UTC] sniper@php.net
Assigning to the maintainer.
 [2005-09-16 17:53 UTC] dmitry@php.net
Fixed in CVS HAED, PHP_5_1 and PHP_5_0.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 16:00:01 2026 UTC