Fixed bug #34478 (Incorrect parsing of url's fragment (#...))